# Multimetr

./: Build  CMakeLists.txt  README.md  main.cpp
Image/: Img.qrc
JsScripts/: Range.js
RCC/: HelpShell.txt  HelpStart.txt  Various.qrc
Sources/: Client.cpp  Client.h  CommunicationCenter.cpp  CommunicationCenter.h  GuiApp.cpp  GuiApp.h  MainWindow.qml  Mode.cpp  Mode.h  MyButton.qml  MyComboBox.qml  MyDelayButton.qml  Shell.cpp  Shell.h  SocketClient.cpp  SocketClient.h  System.cpp  System.h  TypeApplication.h
